--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="seccion-skills">
 
                 <div>
-                    <img class="imagen-skills" src="/img/skills/css-11.png" alt="css">
+                    <img class="imagen-skills" src="/../img/skills/css-11.png" alt="css">
                     <img class="imagen-skills" src="/img/skills/javascript1.png" alt="javascript">
                     <img class="imagen-skills" src="/img/skills/html55.png" alt="html">
                     <img class="imagen-skills" src="/img/skills/visual-studio.png" alt="visual studio">
